# skog

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/skog/: CMakeLists.txt  main.cpp  scraper.cpp  scraper.hpp
src/skog/parsers/: category_id_parser.hpp  category_parser.hpp  product_parser.hpp
